--- a/src/main/webapp/WEB-INF/views/articles/create.jspx
+++ b/src/main/webapp/WEB-INF/views/articles/create.jspx
@@ -3,7 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_fr_edu_eportfolio_domain_Article" modelAttribute="article" path="/articles" render="${empty dependencies}" z="imr9t6nKQmXx1tUpem6yL1onTtg=">
-        <field:input field="nom" id="c_fr_edu_eportfolio_domain_Article_nom" max="30" min="1" required="true" z="TCDjsZPv/gY3KNRAra7YjntkYNE="/>
+        <field:textarea field="nom" id="c_fr_edu_eportfolio_domain_Article_nom" required="true" z="c9fFQHSIVsgSdsD9Y3iUOxypGDg="/>
         <field:input field="detail" id="c_fr_edu_eportfolio_domain_Article_detail" required="true" z="XCgwAyULtd7YtHBqn5bCDU5lemU="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_fr_edu_eportfolio_domain_Article" render="${not empty dependencies}" z="/UxB7BK24uswdHYzpVW+zZ0KCQk="/>
