--- a/src/main/webapp/WEB-INF/views/presentation/index.jspx
+++ b/src/main/webapp/WEB-INF/views/presentation/index.jspx
@@ -4,10 +4,13 @@
   <jsp:output omit-xml-declaration="yes"/>
   <spring:message code="label_presentation_index" htmlEscape="false" var="title"/>
 
-  <util:panel id="title" title="${title}">
-    <spring:message code="application_name" htmlEscape="false" var="app_name"/>
-    <h3>
-      <spring:message arguments="${app_name}" code="welcome_titlepane"/>
-    </h3>
-  </util:panel>
+	<div id="pagePrincipale">
+		<div class="vignette">
+			Exemple d'une vignette:<br />
+			- Mission 1<br />
+			- Mission 2...
+			http://www.webinventif.fr/comment-faire-des-info-bulles-avec-preview-dimage-via-jquery/ 
+		</div>
+	
+	</div>
 </div>
