--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -4,6 +4,7 @@ html{
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-position:center;
+	background-color: rgba(0,0,0,1);
 }
 body,div,td {
 	font-family: Arial, Helvetica, sans-serif;
@@ -17,13 +18,13 @@ body {
 }
 
 #header {
-	margin-bottom: 1em;
+	margin-bottom:10%;
 }
 
 #wrapper {
-	width:800px;
-	min-width: 800px;
-	max-width: 800px;
+	width:1010px;
+	min-width: 1010px;
+	max-width: 1010px;
 	margin-right: auto;
 	margin-left: auto;
 
@@ -41,6 +42,13 @@ body {
 	display:box;
 }
 
+#pagePrincipale{
+	width:98%;
+	height:80%;
+	border-radius:5px 5px 5px 5px;
+	padding:10px;
+	background-color:rgba(0,0,0,0.8);
+}
 #menu {
 	background: #eee;
 	position:relative;
@@ -377,4 +385,13 @@ fieldset th {
 .flag {
 	height: 11px;
 	width: 16px;
+}
+
+.vignette{
+	width: 15%;
+	height: 50px;
+	padding:10px;
+	margin:15px;
+	border-radius:5px;
+	background-color: rgba(250,250,250,1);
 }
