--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -395,3 +395,37 @@ fieldset th {
 	border-radius:5px;
 	background-color: rgba(250,250,250,1);
 }
+
+/* css pour la tooltip lien avec preview */
+#screenshot{
+        position:absolute;
+        border:1px solid #ccc;
+        background:#333;
+        padding:5px;
+        display:none;
+        color:#fff;
+}
+/* css pour la tooltip image preview */
+#preview{
+        position:absolute;
+        border:1px solid #ccc;
+        background:#333;
+        padding:5px;
+        display:none;
+        color:#fff;
+}
+/* css pour la tooltip normal */
+#tooltip{
+        position:absolute;
+        border:1px solid #333;
+        background:#f7f5d1;
+        padding:2px 5px;
+        color:#333;
+        display:none;
+}
+
+.screenshot{
+	display:block;
+    width:100%;
+    height:50px;
+}
