--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -5,8 +5,32 @@
   <spring:url var="banner" value="/resources/images/essai11.png" />
   <spring:url var="home" value="/" />
   <spring:message code="button_home" var="home_label" htmlEscape="false" />
-  <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
-    <img src="${banner}" />
-  </a>
-
+  <div id="banniere">
+    <a  href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
+      <img src="${banner}" />
+    </a>
+  </div>
+  <div id="menuWrapper">
+    <div id="menuContainer">
+		  <ul class="jMenu">
+		      <li class="ongletMenu"><a class="fNiv">Situations Professionnelles</a> <!-- Don't forget the 'fNiv' class, only on the first level link !! -->
+		          <ul>
+		              <li><a>Niveau 2</a></li>
+		              <li><a>Niveau 2</a></li>
+		              <li><a>Niveau 2</a></li>
+		              <li><a>Niveau 2</a></li>
+		          </ul>
+		      </li>
+		      <li class="ongletMenu"><a class="fNiv">Compétences Acquises</a>
+		        <ul>
+		              <li><a>Niveau 2</a></li>
+		              <li><a>Niveau 2</a></li>
+		              <li><a>Niveau 2</a></li>
+		        </ul>
+		      </li>
+		      <li class="ongletMenu"><a class="fNiv" href="/eportfolio/administration">Administration</a>
+		      </li>
+		  </ul>
+		</div>
+  </div>
 </div> 
