--- a/src/main/webapp/WEB-INF/views/situationproes/create.jspx
+++ b/src/main/webapp/WEB-INF/views/situationproes/create.jspx
@@ -2,7 +2,7 @@
 <div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:create id="fc_fr_edu_eportfolio_domain_SituationPro" modelAttribute="situationPro" path="/activites" render="${empty dependencies}" z="4xkkbzeVjDe/Vfvre4hpavnXelY=">
+    <form:create id="fc_fr_edu_eportfolio_domain_SituationPro" modelAttribute="situationPro" path="/situationproes" render="${empty dependencies}" z="9NjtAy6XY2QyTYFIbiUoOd/PigA=">
         <field:textarea field="nom" id="c_fr_edu_eportfolio_domain_SituationPro_nom" required="true" z="xRKkG8rkLa6bCldsLWhTuOgvF20="/>
         <field:textarea field="urlDetail" id="c_fr_edu_eportfolio_domain_SituationPro_urlDetail" required="true" z="6HcQiNCAFujR/Gq5l0rtp2PSX7E="/>
         <field:textarea field="vignette" id="c_fr_edu_eportfolio_domain_SituationPro_vignette" required="true" z="w9k7Jez4otSpOzcSuUJ8Z7jU5/Q="/>
