--- a/src/main/webapp/WEB-INF/views/situationproes/show.jspx
+++ b/src/main/webapp/WEB-INF/views/situationproes/show.jspx
@@ -2,7 +2,7 @@
 <div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <page:show id="ps_fr_edu_eportfolio_domain_SituationPro" object="${situationpro}" path="/activites" z="Fz36OB/UEQ++P/nG0QcExYSpezM=">
+    <page:show id="ps_fr_edu_eportfolio_domain_SituationPro" object="${situationpro}" path="/situationproes" z="zz51mWsTHXMdomOI1kPBKLbTcmY=">
         <field:display field="nom" id="s_fr_edu_eportfolio_domain_SituationPro_nom" object="${situationpro}" z="631UIu5gXpTYZnOS0iGCehyAOc4="/>
         <field:display field="urlDetail" id="s_fr_edu_eportfolio_domain_SituationPro_urlDetail" object="${situationpro}" z="WxID6kVXNQE1Wb/tVRvsDJVa9N4="/>
         <field:display field="vignette" id="s_fr_edu_eportfolio_domain_SituationPro_vignette" object="${situationpro}" z="0MOCy6OSXpdI1Lr64ZRYjx5lChA="/>
