--- a/src/main/webapp/WEB-INF/views/administration/index.jspx
+++ b/src/main/webapp/WEB-INF/views/administration/index.jspx
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
+<div xmlns:jsp="http://java.sun.com/JSP/Page" 
+     xmlns:c="http://java.sun.com/jsp/jstl/core"
+     xmlns:form="http://www.springframework.org/tags/form"
+     xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+     xmlns:spring="http://www.springframework.org/tags" 
+     xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
+     
   <jsp:directive.page contentType="text/html;charset=UTF-8"/>
   <jsp:output omit-xml-declaration="yes"/>
   <spring:message code="label_administration_index" htmlEscape="false" var="title"/>
-  <util:panel id="title" title="${title}">
-    <spring:message code="application_name" htmlEscape="false" var="app_name"/>
-    <h3>
-      <spring:message arguments="${app_name}" code="welcome_titlepane"/>
-    </h3>
-  </util:panel>
+  <div id="pageAdministration">
+	  <c:forEach items="${lesSituationPros}" var="situPro">
+	     <h1>${situPro.nom} :</h1>
+	     <p>
+	       Articles : 
+	       <table>
+		       <c:forEach items="${situPro.articles}" var="article">	         
+			         <tr>
+			          <td>${article.nom}</td>
+			          <td>${article.detail}</td>
+			         </tr>
+		       </c:forEach>
+	       </table>
+	     </p>
+	  </c:forEach>
+  </div>
 </div>
