--- a/src/main/webapp/WEB-INF/views/administration/index.jspx
+++ b/src/main/webapp/WEB-INF/views/administration/index.jspx
@@ -9,21 +9,14 @@
   <jsp:directive.page contentType="text/html;charset=UTF-8"/>
   <jsp:output omit-xml-declaration="yes"/>
   <spring:message code="label_administration_index" htmlEscape="false" var="title"/>
-  <script>
-    window.onload = function() {
-        CKEDITOR.replace( 'editor1' );
-        CKEDITOR.replace( 'editor2' );
-    };
-</script>
   
-  <div id="pageAdministration">
+  <div class="pageCorps">
 	  <c:forEach items="${lesSituationPros}" var="situPro">
 	     <h1>${situPro.nom} :</h1>
 	     <p>
 	       Articles : 
 		       <c:forEach items="${situPro.articles}" var="article">	         
-			          <textarea name="editor1">${article.nom}</textarea>
-			          <textarea name="editor2">${article.detail}</textarea>
+			          <a href="/eportfolio/articles/${article.id}?form">${article.nom}</a>
 		       </c:forEach>
 	     </p>
 	  </c:forEach>
