--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -5,6 +5,11 @@
   <spring:url var="banner" value="/resources/images/essai11.png" />
   <spring:url var="home" value="/" />
   <spring:message code="button_home" var="home_label" htmlEscape="false" />
+  <script>
+    window.onload = function() {
+        CKEDITOR.replace( '_detail_id' );
+    };
+  </script>
   <div id="banniere">
     <a  href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
       <img src="${banner}" />
