--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -42,18 +42,13 @@ body {
 	overflow:hidden;
 	display:box;
 }
-#pageAdministration{
+.pageCorps{
 	width:1000px;
 	margin-left:auto;
 	margin-right:auto;
 	border-radius:5px 5px 5px 5px;
-  padding:10px;
-  background-color:rgba(0,0,0,0.8);
-}
-#pagePrincipale{
-	border-radius:5px 5px 5px 5px;
-	padding:10px;
-	background-color:rgba(0,0,0,0.8);
+  	padding:10px;
+  	background-color:rgba(0,0,0,0.8);
 }
 
 #menu ul{
@@ -95,12 +90,12 @@ body {
 }
 
 #footer {
-	border-radius:5px;
-	padding:10px;
-	background:#fff;
-	border:none;
-	margin-top:15px;
-	border-top:1px solid #999999;
+	border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-top:20px;
+  background:-moz-linear-gradient(top,#e9dac8,#d1b38f);
+/*   box-shadow: 0px 0px 1px 2px #e9dac8; */
+  height:50px;
 }
 
 #footer .new {
@@ -436,9 +431,11 @@ fieldset th {
 /* /* -------------------------------------------------------------------- */ 
 
 #menuWrapper {
+	border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 	margin-top:20px;
   background:-moz-linear-gradient(top,#d1b38f,#e9dac8);
-  box-shadow: 0px 0px 3px 2px #d1b38f;
+/*   box-shadow: 0px 0px 3px 2px #d1b38f; */
   height:50px;
 }
 
