--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -9,7 +9,7 @@ html{
 body,div,td {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	color: #666;
+	color: #333;
 }
 
 body {
@@ -44,11 +44,13 @@ body {
 }
 .pageCorps{
 	width:1000px;
+	height:550px;
+	overflow:auto;
 	margin-left:auto;
 	margin-right:auto;
 	border-radius:5px 5px 5px 5px;
-  	padding:10px;
-  	background-color:rgba(0,0,0,0.8);
+ 	padding:10px;
+ 	background-color:rgba(0,0,0,0.8);
 }
 
 #menu ul{
@@ -249,8 +251,9 @@ table table {
 }
 
 table td,table th {
-	padding: 2px;
-	border: 1px solid #CCCCCC;
+  width:1000px; 
+	padding: 7px;
+	border: 1px solid #333;
 }
 
 table td form {
@@ -524,5 +527,23 @@ fieldset th {
 
 .jMenu li ul li a:hover {
     background-color: #e9dac8;
+}
+
+.initial{
+	  display:inline-block;
+	  margin:40px;
+	  padding:10px;
+	  width: 400px;
+    height: 200px;
+    background-color: #d1b38f;
+    border-radius:5px;
+}
+.final {
+	  margin:40px;
+	  padding:10px;
+		width: 400px;
+		height: 400px;
+		background-color: #e9dac8;
+		border-radius:5px;
 }
 
