--- a/src/main/webapp/WEB-INF/views/presentation/index.jspx
+++ b/src/main/webapp/WEB-INF/views/presentation/index.jspx
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
+<div xmlns:jsp="http://java.sun.com/JSP/Page" 
+     xmlns:c="http://java.sun.com/jsp/jstl/core"
+     xmlns:form="http://www.springframework.org/tags/form"
+     xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+     xmlns:spring="http://www.springframework.org/tags" 
+     xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
   <jsp:directive.page contentType="text/html;charset=UTF-8"/>
   <jsp:output omit-xml-declaration="yes"/>
   <spring:message code="label_presentation_index" htmlEscape="false" var="title"/>
@@ -12,7 +17,25 @@
 			- Mission 2...
 		</div>
 	 -->
-	 
+
+		 <c:forEach items="${lesSituationPros}" var="situationPro">
+			 <div class="initial">
+			  <p>${situationPro.nom}</p>
+			  <p>${situationPro.vignette}</p>
+		   </div>
+	   </c:forEach>
+
+     <script>
+       $( ".initial" ).click(function() {
+          $( this ).toggleClass( "final", 300, "easeOutSine" );
+          });
+     </script>
+     <script type="text/javascript">
+				jQuery(document).ready(function() {
+					  jQuery('.nailthumb-container').nailthumb({width:380,height:160});
+				});
+		 </script>
+
 	 
 	</div>
 </div>
