modif base, reste a faire le dialog pour l'affichage de l'article

--- a/src/main/webapp/WEB-INF/views/couverturecomp/index.jspx
+++ b/src/main/webapp/WEB-INF/views/couverturecomp/index.jspx
@@ -12,6 +12,7 @@
 		<TABLE>
 			<c:forEach items="${lesComps}" var="comp">
         <tr>
+          <td>${comp.id}</td>
 	        <td>${comp.reference} - ${comp.nom}</td>
 	        <td>
 	          <c:forEach items="${lesSituations}" var="situation">
