--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -530,18 +530,19 @@ fieldset th {
 }
 
 .initial{
-	  display:inline-block;
-	  margin:40px;
+	  display:auto;
+	  margin:10px;
 	  padding:10px;
-	  width: 400px;
+	  width: 200px;
     height: 200px;
     background-color: #d1b38f;
     border-radius:5px;
 }
 .final {
-	  margin:40px;
+	  display:auto;
+	  margin:10px;
 	  padding:10px;
-		width: 400px;
+		width: 200px;
 		height: 400px;
 		background-color: #e9dac8;
 		border-radius:5px;
