dialog plugin op.. Maj du style, import des pics bientot finit

--- a/src/main/webapp/WEB-INF/views/presentation/index.jspx
+++ b/src/main/webapp/WEB-INF/views/presentation/index.jspx
@@ -1,41 +1,155 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:jsp="http://java.sun.com/JSP/Page" 
-     xmlns:c="http://java.sun.com/jsp/jstl/core"
-     xmlns:form="http://www.springframework.org/tags/form"
-     xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-     xmlns:spring="http://www.springframework.org/tags" 
-     xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
-  <jsp:directive.page contentType="text/html;charset=UTF-8"/>
-  <jsp:output omit-xml-declaration="yes"/>
-  <spring:message code="label_presentation_index" htmlEscape="false" var="title"/>
-
+<div xmlns:jsp="http://java.sun.com/JSP/Page"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:form="http://www.springframework.org/tags/form"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+	xmlns:spring="http://www.springframework.org/tags"
+	xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
+	<jsp:directive.page contentType="text/html;charset=UTF-8" />
+	<jsp:output omit-xml-declaration="yes" />
+	<spring:message code="label_presentation_index" htmlEscape="false"
+		var="title" />
 
 	<div class="pageCorps">
-		<!-- <div class="screenshot" rel="/eportfolio/resources/images/create.png" style="cursor: pointer;" onclick="window.location.href='http://www.cssglobe.com'" title="http://www.cssglobe.com"></div>
-			Exemple d'une vignette:<br />
-			- Mission 1<br />
-			- Mission 2...
-		</div>
-	 -->
+		<c:forEach items="${lesSituationPros}" var="situationPro">
+			<div class="initial opener${situationPro.id}">
+				<p><h3>${situationPro.nom}</h3></p>
+				<p>${situationPro.vignette}</p>
+			</div>
+			<div class="dialog${situationPro.id}">
+			   <c:forEach items="${situationPro.articles}" var="article">
+			     ${article.detail}
+			   </c:forEach>
+			</div>
+		</c:forEach>
+		<SCRIPT type="text/javascript">
+		   $(".opener1").click(function() {
+			   $( ".dialog1" ).dialog("open");
+			 });
+		</SCRIPT>
+		<SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog1").dialog({autoOpen: false});
+        });
+      </SCRIPT>
+    <SCRIPT type="text/javascript">
+       $(".opener2").click(function() {
+         $( ".dialog2" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+        	$(".dialog2").dialog({autoOpen: false});
+        });
+      </SCRIPT>
+    <SCRIPT type="text/javascript">
+       $(".opener3").click(function() {
+         $( ".dialog3" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+        	$(".dialog3").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener4").click(function() {
+         $( ".dialog4" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog4").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener5").click(function() {
+         $( ".dialog5" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog5").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener6").click(function() {
+         $( ".dialog6" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog6").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener7").click(function() {
+         $( ".dialog7" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog7").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener8").click(function() {
+         $( ".dialog8" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog8").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener9").click(function() {
+         $( ".dialog9" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog9").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+       $(".opener10").click(function() {
+         $( ".dialog10" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog10").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener11").click(function() {
+         $( ".dialog11" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog11").dialog({autoOpen: false});
+        });
+    </SCRIPT>
+        <SCRIPT type="text/javascript">
+       $(".opener12").click(function() {
+         $( ".dialog12" ).dialog("open");
+       });
+    </SCRIPT>
+    <SCRIPT type="text/javascript">
+        $(function() {
+          $(".dialog12").dialog({autoOpen: false});
+        });
+    </SCRIPT>
 
-		 <c:forEach items="${lesSituationPros}" var="situationPro">
-			 <div class="initial">
-			  <p>${situationPro.nom}</p>
-			  <p>${situationPro.vignette}</p>
-		   </div>
-	   </c:forEach>
-
-     <script>
-       $( ".initial" ).click(function() {
-          $( this ).toggleClass( "final", 300, "easeOutSine" );
-          });
-     </script>
-     <script type="text/javascript">
-				jQuery(document).ready(function() {
-					  jQuery('.nailthumb-container').nailthumb({width:380,height:160});
+		<script type="text/javascript">
+			jQuery(document).ready(function() {
+				jQuery('.nailthumb-container').nailthumb({
+					width : 230,
+					height : 90
 				});
-		 </script>
+			});
+		</script>
 
-	 
 	</div>
 </div>
