--- a/src/main/webapp/WEB-INF/layouts/layouts.xml
+++ b/src/main/webapp/WEB-INF/layouts/layouts.xml
@@ -15,5 +15,7 @@
     <put-attribute name="header" value="/WEB-INF/views/header.jspx" />
     <put-attribute name="footer" value="/WEB-INF/views/footer.jspx" />
   </definition>
+  
+  <definition name="home" template="/WEB-INF/layouts/homeRedirect.jspx" />
 
 </tiles-definitions>
