--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -1,6 +1,6 @@
 /* main elements */
 html{
-	background-image:url('../images/background_degBois.jpg');
+	background-image:url('../images/wallpaper3.png');
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-position:center;
@@ -52,6 +52,15 @@ body {
  	padding:10px;
  	background-color:rgba(0,0,0,0.8);
 }
+#menu {
+	border-radius:5px 5px 5px 5px;
+  background: #eee;
+  position: relative;
+  float:left;
+  left: 0px;
+  width: 150px;
+  margin-right: 15px;
+}
 
 #menu ul{
 	list-style: none;
@@ -72,6 +81,7 @@ body {
 }
 
 #menu h2 {
+	border-radius:5px 5px 5px 5px;
 	color: #fff;
 	background: #648C1D;
 	text-transform: uppercase;
@@ -530,21 +540,15 @@ fieldset th {
 }
 
 .initial{
-	  display:auto;
+	  margin-left:auto;
+    margin-right:auto;
+	  float:left;
 	  margin:10px;
 	  padding:10px;
-	  width: 200px;
+	  width: 285px;
     height: 200px;
     background-color: #d1b38f;
     border-radius:5px;
 }
-.final {
-	  display:auto;
-	  margin:10px;
-	  padding:10px;
-		width: 200px;
-		height: 400px;
-		background-color: #e9dac8;
-		border-radius:5px;
-}
+
 
