--- a/src/main/webapp/WEB-INF/views/presentation/index.jspx
+++ b/src/main/webapp/WEB-INF/views/presentation/index.jspx
@@ -15,7 +15,7 @@
 				<p><h3>${situationPro.nom}</h3></p>
 				<p>${situationPro.vignette}</p>
 			</div>
-			<div class="dialog${situationPro.id}">
+			<div class="dialog${situationPro.id}" title="${situationPro.nom}">
 			   <c:forEach items="${situationPro.articles}" var="article">
 			     ${article.detail}
 			   </c:forEach>
@@ -28,7 +28,7 @@
 		</SCRIPT>
 		<SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog1").dialog({autoOpen: false});
+          $(".dialog1").dialog({autoOpen: false, modal: true, width:1200});
         });
       </SCRIPT>
     <SCRIPT type="text/javascript">
@@ -38,7 +38,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-        	$(".dialog2").dialog({autoOpen: false});
+        	$(".dialog2").dialog({autoOpen: false, modal: true, width:1200});
         });
       </SCRIPT>
     <SCRIPT type="text/javascript">
@@ -48,7 +48,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-        	$(".dialog3").dialog({autoOpen: false});
+        	$(".dialog3").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -58,7 +58,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog4").dialog({autoOpen: false});
+          $(".dialog4").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -68,7 +68,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog5").dialog({autoOpen: false});
+          $(".dialog5").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -78,7 +78,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog6").dialog({autoOpen: false});
+          $(".dialog6").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -88,7 +88,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog7").dialog({autoOpen: false});
+          $(".dialog7").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -98,7 +98,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog8").dialog({autoOpen: false});
+          $(".dialog8").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -108,7 +108,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog9").dialog({autoOpen: false});
+          $(".dialog9").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
     <SCRIPT type="text/javascript">
@@ -118,7 +118,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog10").dialog({autoOpen: false});
+          $(".dialog10").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -128,7 +128,7 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog11").dialog({autoOpen: false});
+          $(".dialog11").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
         <SCRIPT type="text/javascript">
@@ -138,15 +138,15 @@
     </SCRIPT>
     <SCRIPT type="text/javascript">
         $(function() {
-          $(".dialog12").dialog({autoOpen: false});
+          $(".dialog12").dialog({autoOpen: false, modal: true, width:1200});
         });
     </SCRIPT>
 
 		<script type="text/javascript">
 			jQuery(document).ready(function() {
 				jQuery('.nailthumb-container').nailthumb({
-					width : 230,
-					height : 90
+					width : 280,
+					height : 130
 				});
 			});
 		</script>
