--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -22,19 +22,9 @@ body {
   margin-left: auto;
 }
 #header {
-	margin-bottom:1%;
+	background-color:rgba(0,0,0,0.8);
 }
 
-#wrapper {
-	margin-right: auto;
-	margin-left: auto;
-
-	/* fix max-width incompatibility in IE6 */
-	width:expression(document.body.clientWidth > 800? "800px": "auto" );
-	
-	overflow:hidden;
-	display:block;
-}
 
 /* header and footer elements */
 
@@ -44,11 +34,11 @@ body {
 }
 .pageCorps{
 	width:1000px;
-	height:550px;
+	height:565px;
 	overflow:auto;
 	margin-left:auto;
 	margin-right:auto;
-	border-radius:5px 5px 5px 5px;
+	/* border-radius:5px 5px 5px 5px; */
  	padding:10px;
  	background-color:rgba(0,0,0,0.8);
 }
@@ -101,14 +91,6 @@ body {
 	background: #fff;
 }
 
-#footer {
-	border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  margin-top:20px;
-  background:-moz-linear-gradient(top,#e9dac8,#d1b38f);
-/*   box-shadow: 0px 0px 1px 2px #e9dac8; */
-  height:50px;
-}
 
 #footer .new {
 	float:left;
@@ -402,52 +384,22 @@ fieldset th {
 	background-color: rgba(250,250,250,1);
 }
 
-/* /* -------------------------------------------------------------------- */ 
-/* /* Preview Plugin */ */
-/* /* -------------------------------------------------------------------- */ 
-/* css pour la tooltip lien avec preview */
-#screenshot{
-  position:absolute;
-  border:1px solid #ccc;
-  background:#333;
-  padding:5px;
-  display:none;
-  color:#fff;
-}
-/* css pour la tooltip image preview */
-#preview{
-  position:absolute;
-  border:1px solid #ccc;
-  background:#333;
-  padding:5px;
-  display:none;
-  color:#fff;
-}
-/* css pour la tooltip normal */
-#tooltip{
-  position:absolute;
-  border:1px solid #333;
-  background:#f7f5d1;
-  padding:2px 5px;
-  color:#333;
-  display:none;
-}
-
-.screenshot{
-	display:block;
-  width:100%;
-  height:50px;
-}
 
 /* /* -------------------------------------------------------------------- */ 
 /* /* Menu css  */ 
 /* /* -------------------------------------------------------------------- */ 
-
+#footer {
+  /* border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px; */
+  background:-moz-linear-gradient(top,#E2C9AC,#D1B38F);/*#d1b38f*/
+/*   box-shadow: 0px 0px 1px 2px #e9dac8; */
+  height:50px;
+}
 #menuWrapper {
-	border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+	/* border-top-left-radius: 5px;
+  border-top-right-radius: 5px; */
 	margin-top:20px;
-  background:-moz-linear-gradient(top,#d1b38f,#e9dac8);
+  background:-moz-linear-gradient(top,#D1B38F,#E2C9AC); /*#d1b38f  */
 /*   box-shadow: 0px 0px 3px 2px #d1b38f; */
   height:50px;
 }
@@ -551,4 +503,11 @@ fieldset th {
     border-radius:5px;
 }
 
+img{
+	margin:10px;
+	box-shadow: 1px 1px 2px black;
+}
 
+.imgBann{
+	box-shadow: 0px 0px 0px grey;
+}
